--- a/Objects.tex
+++ b/Objects.tex
@@ -7,7 +7,7 @@ The event reconstruction starts with the identification of fundamental objects i
 Furthermore, calorimeter clusters are formed based on adjacent calorimeter cells in each sub-detector separately: ECAL barrel, ECAL endcap, HCAL barrel, HCAL endcap, PS first layer and PS second layer. First, seed clusters are defined as local calorimeter-cell energy maxima. Second, neighbouring cells are combined with seed clusters when their energy exceeds a pre-defined threshold representing two standard deviations of the electronics noise. In the HF however, no clustering is performed and each calorimeter cell gives rise to one cluster. \\
 A particle traversing the detector gives typically rise to several of such elementary objects: one charged-particle track, and/or several calorimeter clusters and/or one muon track. Consequently, a dedicated link algorithm is applied in order to connect these elements. Linked elements form blocks and remove a potential double-counting of the same object in different detector parts. First, charged-tracks are associated to calorimeter clusters if the extrapolated trajectory matches the cluster within the cluster boundaries. This is done considering effects like gaps and cracks between detector components, uncertainty on the shower position or multiple scattering. To account for bremsstrahlung, also tangents of the tracks are extrapolated to the respective energy clusters. In addition, also ECAL and HCAL clusters can be connected to each other by linking clusters in the more granular calorimeter to clusters in the less granular one. Finally, global muons can be defined by associating charged-tracks from the tracker with muon tracks reconstructed in the muon system. \\
 After the identification of such blocks of elements, the PF algorithm creates a list of all particles contained in the event applying dedicated quality criteria interpreting the blocks in terms of particles. The identification of muons and a removal of their tracks from the blocks is followed by an assignment of electrons and associated bremsstrahlung from tracks and linked ECAL clusters. After these have been removed from the list of blocks as well, remaining blocks with a good quality track are considered to be charged hadrons. Their momenta are determined from combining the track momentum and the respective energy in the calorimeter cluster. If the cluster energy exceeds the measured momentum from the track beyond the expected calorimeter energy resolution, it constitutes a photon and if the excess is larger than the total ECAL energy also a neutral hadron. Finally, remaining ECAL and HCAL clusters not linked to any track give rise to photons and neutral hadrons. \\
-The complete set of particles can then be used to derive further objects and quantities, like jets as discussed in Sec.~\ref{sec:jets_reco}, missing transverse energy \met or decay products of tau leptons. More detailled information on the specific quality criteria required for the identification of certain particles is given in Chap.~\ref{chap:Resolution},~\ref{chap:RA2} and~\ref{chap:Stop} for each analysis presented in this thesis.
+The complete set of particles can then be used to derive further objects and quantities, like jets as discussed in Sec.~\ref{sec:jets_reco}, missing transverse energy \met or decay products of tau leptons. More detailed information on the specific quality criteria required for the identification of certain particles is given in Chap.~\ref{chap:Resolution},~\ref{chap:RA2} and~\ref{chap:Stop} for each analysis presented in this thesis.
 
 \section{Reconstruction of Jets}
 \label{sec:jets_reco}
