--- a/RA2.tex
+++ b/RA2.tex
@@ -9,7 +9,7 @@ The search for supersymmetric particles is among the most important goals of the
 \end{figure}
 \\
 Especially light-squarks and gluinos are expected at a sizable rate, even for high masses above 1\tev. For instance, around 100 pairs of gluinos are expected at a mass of 1200\gev. \\
-The analysis presented in this chapter searches for supersymmetric cascade decays arising from strongly produced light-flavour squarks or gluinos. As introduced in Sec.~\ref{subsubsec:susy_decay}, the expected experimental signature contains several hard jets and a certain amount of missing transverse energy. Thus, events are selected based on the number of jets (\NJets), the scalar sum of the jet transverse momenta (\HT) and the missing transverse momentum calculated from the jet momenta (\MHT). However, the generic structure makes the analysis in principle sensitive to any new physics model that manifests in final states containing several hard jets accompanied by missing transverse energy in case the cross section of the process and the acceptance of the selection is large enough. \\
+The analysis presented in this chapter searches for supersymmetric cascade decays arising from strongly produced light-flavour squarks or gluinos. As introduced in Sec.~\ref{subsubsec:susy_decay}, the targeted experimental signature contains several hard jets, a certain amount of missing transverse energy and no isolated leptons. Thus, events are selected based on the number of jets (\NJets), the scalar sum of the jet transverse momenta (\HT) and the missing transverse momentum calculated from the jet momenta (\MHT). However, the generic structure makes the analysis in principle sensitive to any new physics model that manifests in final states containing several hard jets accompanied by missing transverse energy in case the cross section of the process and the acceptance of the selection is large enough. \\
 After the description of the event selection (Sec.~\ref{sec:RA2_sel}), it is discussed how contributions from standard model processes to the selected final state are estimated. Special emphasis is put on the estimation of the QCD multijet background (Sec.~\ref{subsec:RA2_QCD}) as this is performed in the context of this thesis. Finally, results are presented and interpreted in various simplified supersymmetric models (Sec.~\ref{sec:RA2_results}). Parts of this chapter are taken from~\cite{bib:AN-12-350}, written by the author. This analysis follows previous inclusive searches~\cite{springerlink:10.1007/JHEP08(2011)155, Chatrchyan:2012lia} and is published in~\cite{Chatrchyan:2014lfa}.
     
 \section{Event Selection}
