--- a/Resolution.tex
+++ b/Resolution.tex
@@ -1,5 +1,5 @@
 Many measurements of standard model properties or searches for new physics beyond the standard model performed within the CMS experiment rely on events with jets in the final state. Hence, a good understanding of jet properties is of major importance and a crucial ingredient for such kind of analyses. One of such properties is the jet transverse-momentum resolution as introduced in Sec.~\ref{subsec:jets_response}. \\
-Many new physics searches are carried out based on final states containing missing transverse momentum and several jets. Here, QCD multijet events can fake the signature of possible new physics events and constitute a background process since a mismeasurement of the jet momenta due to the limited detector resolution or the decay of heavy flavour quarks leads to a momentum imbalance in the event and consequently to measurable missing energy. The knowledge of the jet resolution is thus a keypoint in the prediction of such background contributions as discussed later in Chap.~\ref{chap:RA2}. \\
+Many new physics searches are carried out based on final states containing missing transverse momentum, several jets and no isolated leptons. Here, QCD multijet events can fake the signature of possible new physics events and constitute a background process since a mismeasurement of the jet momenta due to the limited detector resolution or the decay of heavy flavour quarks leads to a momentum imbalance in the event and consequently to measurable missing energy. The knowledge of the jet resolution is thus a keypoint in the prediction of such background contributions as discussed later in Chap.~\ref{chap:RA2}. \\
 In this chapter, an analysis is presented in which the jet-\pt resolution in data and in simulated events is derived. The method is based on momentum conservation in the transverse plane of dijet events and offers the possibility to cover a large phase space in \pt and $\eta$. A similar approach was already used in previous studies at $\sqrt{s}=7$\tev~\cite{1748-0221-6-11-P11002, thesis:Schroeder}, while a complementary approach utilizes $\gamma +\rm{jet}$ events~\cite{1748-0221-6-11-P11002, CMS-AN-2010-141, CMS-AN-2011-004, CMS-AN-2013-179}. The measurement shown here is based on collision data corresponding to an integrated luminosity of $19.7$\fbinv recorded at $\sqrt{s}=8$\tev in 2012. Parts of this chapter are taken from~\cite{bib:AN2013-416}, having been written by the author.   
 
 \section{Components of the Jet Response}
@@ -198,7 +198,7 @@ with the number of effective entries $n_\mathrm{eff}$\footnote{In case of an unw
 
 \section{Corrections to the Dijet Asymmetry}
 \label{sec:jer_corrections}
-The fundamental relation between the width of the asymmetry distribution and the jet energy resolution as expressed in Eq.~\ref{eq:asymm} holds in this form only for the case of an ideal dijet topology. In real collision events, various effects occur that disturb the exact balance of the two jets as discussed in Sec.~\ref{sec:jer_application}. Such effects can be soft radiation or additional jets originating from the hard scattering. They lead to momentum imbalance in the event and hence broaden the measured asymmetry distribution which consequently also results in an increased measured jet resolution. In order to determine the intrinsic resolution, the measured asymmetry width has to be corrected for such effects.
+The fundamental relation between the width of the asymmetry distribution and the jet energy resolution, as expressed in Eq.~\ref{eq:asymm}, holds in this form only for the case of an ideal dijet topology. In real collision events, various effects occur that disturb the exact balance of the two jets as discussed in Sec.~\ref{sec:jer_application}. Such effects can be soft radiation or additional jets originating from the hard scattering. They lead to momentum imbalance in the event and hence broaden the measured asymmetry distribution which consequently also results in an increased measured jet resolution. In order to determine the intrinsic resolution, the measured asymmetry width has to be corrected for such effects.
 
 \subsection{Correction for Additional Jet Activity}
 \label{subsec:jer_corrections_alpha}
