--- a/Theory.tex
+++ b/Theory.tex
@@ -149,7 +149,7 @@ One example is the Veltman definition of naturalness~\cite{veltman1981infrared}.
 \begin{equation}
 \left| \frac{\lambda_0}{m^2}\frac{\partial m^2}{\partial \lambda_0} \right| < \Delta \; .
 \end{equation}
-While the value of $\Delta$ has been set to $\sim10$ in the past, it was increased over the years such that also values of $\sim100$ or even $\sim1000$ are often considered as acceptable values~\cite{Craig:2013cxa}. \\
+While the value of $\Delta$ has been set to $\sim10$ in the past, it was increased over the years so that now also values of $\sim100$ or even $\sim1000$ are often considered as acceptable values~\cite{Craig:2013cxa}. \\
 Such conditions can be used in order to derive constraints on the spectrum of superpartners which regulate the hierarchy problem. Here, it turns out that not all sparticles are equally important and thus not all have to be situated at the same mass scale. Some typical mass ranges for sparticles considered as natural are given in Sec.~\ref{subsec:mssm}. 
 
 \subsection{The MSSM}
@@ -237,7 +237,7 @@ Results from SUSY searches at the Tevatron have been interpreted in the context 
 
 \subsection{Searches at the LHC}
 \label{subsec:susy_LHC_searches}
-The absence of SUSY-like signals at any collider experiment performed previously to the start of the LHC and exclusion limits at the order of a few hundred GeV on sparticle masses activated a variety of searches for supersymmetry at the LHC. These are targeting the various different production and decay modes of supersymmetric partices and can be classified into searches for squarks and gluinos, third generation sfermions and electroweakinos. Of particular interest are searches for coloured particles, as the LHC is, as well as the \tevatron, a hadron collider. In this thesis, searches for supersymmetry are presented that are based on all-jet final states accompanied by missing transverse energy and no leptons. Thus, these so-called \textit{hadronic signatures} are discussed in the following.
+The absence of SUSY-like signals at any collider experiment performed previously to the start of the LHC and exclusion limits at the order of a few hundred GeV on sparticle masses activated a variety of searches for supersymmetry at the LHC. These are targeting the various different production and decay modes of supersymmetric partices and can be classified into searches for squarks and gluinos, third generation sfermions and electroweakinos. Of particular interest are searches for coloured particles, as the LHC is, as well as the \tevatron, a hadron collider. In this thesis, searches for supersymmetry are presented that are based on jet final states accompanied by missing transverse energy and no isolated leptons. Thus, these so-called \textit{hadronic signatures} are discussed in the following.
 
 \subsubsection*{Production Modes}
 \label{subsubsec:susy_prod}
