corrections for publication

--- a/Objects.tex
+++ b/Objects.tex
@@ -96,7 +96,7 @@ p^\mathrm{cor} = C \cdot p^\mathrm{raw} = C_{\mathrm{offset}}(\pt^\mathrm{raw}, 
  where $C$ is composed of the offset correction $C_{\mathrm{offset}}$, the calibration factors $C_{\mathrm{rel}}$ and $C_{\mathrm{abs}}$ as well as residual correction factors $C_{\mathrm{res}}$. While $C_{\mathrm{offset}}$, $C_{\mathrm{rel}}$ and $C_{\mathrm{abs}}$ are applied to both data and simulation, the residual correction factors $C_{\mathrm{res}}$ are applied to data only. Each correction factor is applied sequentially after the other in a fixed order such that $\pt'$ denotes the transverse momentum after the application of the offset correction and $\pt''$ is the transverse momentum after applying the respective previous corrections. Some details for each individual correction are given in the following: 
 \begin{description}
  \item \textbf{L1 Offset:} The L1 offset correction is designed to compensate for additional energy contributions arising from instrumental noise or pileup events. The \pt offset is estimated in dependence of $\eta$, the effective jet area $A_j$ and the \pt-density $\rho$ (\textit{hybrid jet area method}~\cite{Cacciari2008119}). \\
-The jet area is determined by adding a large number of inifinitely soft four-momentum vectors to the event. The active jet area is then defined as the fraction of soft particles clustered together with the true hard jet components. The \pt-density $\rho$ is defined on an event-by-event basis as the median of the distribution $\pt^{j}/A_{j}$ where $j$ denotes all reconstructed jets in the event. The estimated offset in simulated QCD multijet events and data is illustrated in Fig.~\ref{fig:l1offset}.
+The jet area is determined by adding a large number of infinitely soft four-momentum vectors to the event. The active jet area is then defined as the fraction of soft particles clustered together with the true hard jet components. The \pt-density $\rho$ is defined on an event-by-event basis as the median of the distribution $\pt^{j}/A_{j}$ where $j$ denotes all reconstructed jets in the event. The estimated offset in simulated QCD multijet events and data is illustrated in Fig.~\ref{fig:l1offset}.
 \begin{figure}[!h]
   \centering 
   \begin{tabular}{c}
