--- a/Theory.tex
+++ b/Theory.tex
@@ -112,7 +112,7 @@ In this section, a brief introduction to the general concept of supersymmetry is
 %The basic idea behind supersymmetry is that each standard model particle gets a supersymmetric partner particle which possesses the same quantum numbers except for the spin which differs by $1/2$. 
 The basic idea of a supersymmetric theory is that a fermionic state is converted into a bosonic state and vice versa by the generator of a supersymmetry transformation $Q$ according to
 \begin{equation*}
-Q \ket{\mathrm{fermion}} \, = \, Q \ket{\mathrm{boson}}, \hspace{20mm} Q \ket{\mathrm{boson}} \, = \, Q \ket{\mathrm{fermion}}.
+Q \ket{\mathrm{fermion}} \, = \, \ket{\mathrm{boson}}, \hspace{20mm} Q \ket{\mathrm{boson}} \, = \, \ket{\mathrm{fermion}}.
 \end{equation*}
 The supersymmetric fermionic and bosonic partner particles are called \textit{superpartners} and form together the irreducible representations of the supersymmetry algebra named \textit{supermultiplets} with the same number of fermionic and bosonic degrees of freedom. In case of unbroken supersymmetry, partner particles within one supermultiplet have the same mass as well as the same quantum numbers, like electric charge, weak isospin and colour degrees of freedom, except for the spin. Commonly, supersymmetric particles are denoted \textit{sparticles}. \\
 \\
