--- a/Thesis.tex
+++ b/Thesis.tex
@@ -140,18 +140,18 @@ a4paper
 %\newpage 
 %\thispagestyle{empty}
 %\quad 
-%\newpage
-%\thispagestyle{empty}
+\newpage
+\thispagestyle{empty}
 
-%\quad
-%\vfill
-%\noindent{
-%\begin{tabular}{ll}
-%Tag der Disputation:                     & 6. Februar 2015\\
+\quad
+\vfill
+\noindent{
+\begin{tabular}{ll}
+Tag der Disputation:                     & 5. Februar 2015\\
 %                                           & \\
 
-%Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes Haller \\
-%                                           & Jun.-Prof. Dr.\ Christian Sander\\
+Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes Haller \\
+                                           & Jun.-Prof. Dr.\ Christian Sander\\
 %Gutachter der Dissertation:                & Prof.\ Dr.\ bla \\ 
 %                                           & Prof. \ Dr.\ bla\\
 %                                           & \\
@@ -168,17 +168,20 @@ a4paper
 %                                           & \\
 %Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
 %\quad Informatik und Naturwissenschaften:  & Prof.\ Dr.\ bla \\
-%\end{tabular}
-%}
+\end{tabular}
+}
 
-
+%\quad
 \newpage 
 \thispagestyle{empty}
 \quad 
 
+\cleardoublepage
+
 \newpage
 \thispagestyle{empty}
 \input{Abstract.tex}
+\quad 
 
 \cleardoublepage
 
@@ -245,8 +248,8 @@ a4paper
 \cleardoublepage
 \thispagestyle{empty}
 \chapter*{~}
-\input{Erklaerung}
-%\input{Danksagung.tex}
+%\input{Erklaerung}
+\input{Danksagung.tex}
 
 
 \end{document}
