final final update

--- a/Danksagung.tex
+++ b/Danksagung.tex
@@ -1,15 +1,15 @@
 \section*{Danksagung}
 \ \\
-Ich m\"ochte mich an dieser Stelle ganz herzlich bei allen bedanken, die mich w\"ahrend der Zeit meiner Doktorarbeit unterst\"utzt haben. Besonderer Dank gilt dabei:
+Ich m\"ochte mich an dieser Stelle bei allen bedanken, die mich w\"ahrend der Zeit meiner Doktorarbeit unterst\"utzt haben. Besonderer Dank gilt dabei:
 \begin{itemize}
 \item Prof. Dr. Johannes Haller f\"ur die Betreuung meiner Doktorarbeit, die w\"ochentlichen Diskussionen und insbesondere die M\"oglichkeit an zahlreichen Workshops, Konferenzen und Sommerschulen teilnehmen zu d\"urfen.    
 \item Jun.-Prof. Dr. Christian Sander f\"ur die Erstellung des Zweitgutachtens und die umfangreiche Betreuung insbesondere in der ersten H\"alfte meiner Doktorandenzeit. Danke f\"ur die jederzeit geduldige Beantwortung aller meiner Fragen rund um Susy, Jets und R+S.
 \item Prof. Dr. Dieter Horns, Prof. Dr. Jan Louis und Prof. Dr. Peter Schleper f\"ur die Bereitschaft Mitglied meiner Pr\"ufungskommission zu sein, sowie die interessanten und lehrreichen Fragen in meiner Disputation.
-\item Jochen Ott f\"ur die engagierte Unterst\"utzung meiner Arbeit zur Messung der Jet-Aufl\"osung und den Studien zur Stop-Suche. Deine unersch\"opfliche Menge an Ideen und Vorschl\"agen ist wirklich beeindruckend und ich danke dir besonders f\"ur das akribische Lesen meiner Arbeit.
+\item Jochen Ott f\"ur die engagierte Unterst\"utzung meiner Arbeit zur Messung der Jetimpulsaufl\"osung und den Studien zur Suche nach Top-Squarks. Deine unersch\"opfliche Menge an Ideen und Vorschl\"agen ist wirklich beeindruckend und ich danke dir besonders f\"ur das akribische Lesen meiner Arbeit.
 \item Roman Kogler und Thomas Peiffer f\"ur das Korrekturlesen meiner Arbeit und viele n\"utzliche Hinweise.
 \item der Arbeitsgruppe am Institut f\"ur eine angenehme und entspannte Arbeitsatmosph\"are. Besonderer Dank gilt hierbei meinen Kolleginnen Rebekka, Teresa und Mareike f\"ur die vielen sch\"onen Stunden gemeinsam im B\"uro.
 \item meinen Freunden f\"ur die Ablenkung vom Arbeitsalltag.
-\item meinem Mann Martin f\"ur stets motivierende und aufmunternde Worte w\"ahrend meiner gesamten Doktorandenzeit.
+\item meinem Mann Martin f\"ur stets motivierende und aufmunternde Worte w\"ahrend der letzten drei Jahre.
 \item meiner Familie, weil sie immer an mich glaubt und jederzeit bereit ist mich tatkr\"aftig zu unterst\"utzen.
 \end{itemize}
 \ \\
